# cmr_os

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md  cmr_os_kinetic.rosinstall
cmr_api/: CMakeLists.txt  README.md  package.xml
cmr_api/cfg/: message_config.yaml
cmr_api/include/cmr_api/: action_wrapper.h  arm_api.h  call_supervisor_client.h  ear_api.h  led_api.h  led_colors.h  move_base_client.h  sentiment_executor.h  speech_api.h  tablet_menu_handler.h
cmr_api/include/cmr_api/movement/: ctrl_management.h  moveable.h  neutral_mover.h  position_client.h  trajectory_client.h
cmr_api/launch/: cmr_api.launch  cmr_api_no_sentiment.launch  message_node.launch
cmr_api/scripts/: messagenode.py
cmr_api/src/: action_wrapper.cpp  arm_api.cpp  ear_api.cpp  led_api.cpp  speech_api.cpp
cmr_api/src/movement/: moveable.cpp  neutral_mover.cpp
cmr_api/src/nodes/: sentiment_executor.cpp  tablet_menu_handler.cpp
cmr_bt_generic/: CMakeLists.txt  README.md  cmr_bt_generic_tree_nodes.xml  package.xml
cmr_bt_generic/include/cmr_bt_generic/: general.h  social_nodes.h  system_nodes.h
cmr_bt_generic/src/: bt_tester.cpp  general.cpp  social_nodes.cpp  system_nodes.cpp
cmr_bt_generic/xml/: TestTree.xml
cmr_description/: CMakeLists.txt  README.md  package.xml
cmr_description/cfg/: sobi_control.yaml  sobi_ear_control.yaml
cmr_description/launch/: model_upload.launch  model_with_pub.launch  rosbridge.launch  tf_map_to_odom.launch
cmr_description/meshes/: IMU.stl  arm.STL  ear.STL  front_cam_mount.stl  head.STL  torso.STL  velodyne_mount.stl
cmr_description/meshes/cmr_old/: skeleton.stl  top_cam_mount.stl
cmr_description/robots/: cmr.urdf  cmr.urdf.xacro  sobi.urdf.xacro
cmr_description/test/: republish_tf_static.py  test_tf.cpp  tf.test
cmr_description/urdf/: materials.xacro
cmr_description/urdf/base/: macros.xacro  mp_500.urdf.xacro  mp_500_gazebo.xacro  mp_500_properties.xacro
cmr_description/urdf/body/: arms.urdf.xacro  arms_properties.xacro  ears.urdf.xacro  ears_gazebo.xacro  ears_properties.xacro  head.urdf.xacro  head_properties.xacro  torso.urdf.xacro  torso_properties.xacro
cmr_description/urdf/sensors/: gps.urdf.xacro  imu.urdf.xacro  realsense_cameras.urdf.xacro  sonar_sensor.urdf.xacro  sonars.urdf.xacro  velodyne_vlp16.urdf.xacro
cmr_description/urdf/world/: hoersaal.urdf.xacro
cmr_driver/: CMakeLists.txt  README.md  nodelet_plugins.xml  package.xml
cmr_driver/cfg/: ekf_localization.yaml  init_audio_device.sh
cmr_driver/include/cmr_driver/: pcl_repub.h
cmr_driver/include/cmr_driver/nodelets/: register_velodyne.h
cmr_driver/launch/: imu.launch  load.launch  register_velodyne.launch  rotate_image_nodelet.launch  sensors.launch  social.launch  velodyne.launch
cmr_driver/launch/bag/: bag_play.launch  bag_record.launch
cmr_driver/launch/remote/: cam_back_jetson.launch  cam_front_jetson.launch  ear_hw_node.launch  led_panel.launch  mp500.launch  rgbd_sync.launch  rgbd_sync_nodelet.launch  rotate_back_img.launch  rotate_img_republish.launch
cmr_driver/launch/starters/: battery_monitoring_s.launch  cameras_s.launch  ears_s.launch  ekf_s.launch  imu_s.launch  led_s.launch  platform_s.launch  rgbd_sync_s.launch  rgbd_velodyne_s.launch  urdf_s.launch  velodyne_s.launch  voice_interface_s.launch
cmr_driver/src/: pcl_repub.cpp  rotate_image.cpp
cmr_driver/src/nodelets/: register_velodyne.cpp  rotate_image_nodelet.cpp
cmr_driver/test/: get_bag.sh  sensor_nodelets.test
cmr_gazebo/: CMakeLists.txt  README.md  package.xml
cmr_gazebo/config/: cartographer_vlp.lua  ekf_localization_config.yaml  ekf_localization_offline.yaml  navigation.yaml
cmr_gazebo/launch/: octomap_mapping.launch  record_bagfile.launch  record_bagfile_new.launch  rtabmapviz.launch  rviz.launch  simulation.launch  teleop.launch
cmr_gazebo/rviz/: sim.rviz  thirdPerson.rviz
cmr_gazebo/src/: odom_gt_publisher.cpp
cmr_gazebo/test/: gazebo.test  test_gazebo.cpp
cmr_gazebo/worlds/: cm_objects.world  cm_test.world  hoersaal.world  office.world  sekom.world
cmr_gazebo/worlds/models/hoersaal/: model.config  model.sdf
cmr_gazebo/worlds/models/hoersaal/meshes/: hoersaal_02062k19.dae
cmr_gazebo/worlds/models/sekom/: model.config  model.sdf
cmr_gazebo/worlds/models/sekom/meshes/: SEKOM_Saalgemeinschaft_Perspektive_17022k19_Collada14.dae  SEKOM_Saalgemeinschaft_Perspektive_17022k19_Collada15.dae
cmr_os/: CMakeLists.txt  package.xml
cmr_os/include/cmr_os/: cmr_holder.h  cmr_util_filter.h  cmr_util_prob.h  cmr_util_tf.h  pose_republish.h
cmr_os/src/: cmr_holder.cpp  cmr_util_filter.cpp  cmr_util_prob.cpp  cmr_util_tf.cpp  pose_republish.cpp  shutdown_node.cpp
cmr_os/test/: cmr_util_test.cpp  cmr_utils_test.launch
