<?xml version="1.0"?>
<package format="2">
  <name>cmr_api</name>
  <version>0.1.0</version>
  <description>cmr_api</description>

  <maintainer email="Marvin.Stuede@imes.uni-hannover.de">Marvin Stuede</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>cmr_os</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>control_msgs</depend>
  <depend>cmr_msgs</depend>
  <depend>controller_manager_msgs</depend>
</package>
