<?xml version="1.0"?>
<package format="2">
  <name>cmr_bt_generic</name>
  <version>0.1.0</version>
  <description>cmr_bt_generic</description>

  <maintainer email="Marvin.Stuede@imes.uni-hannover.de">Marvin Stuede</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>cmr_api</depend>
  <depend>neo_msgs</depend>
  <depend>behaviortree_cpp_v3</depend>
</package>
