<?xml version="1.0"?>
<package format="2">
  <name>cmr_driver</name>
  <version>0.0.0</version>
  <description>cmr_driver</description>
  <maintainer email="Marvin.Stuede@imes.uni-hannover.de">Marvin Stuede</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_srvs</depend>
  <depend>message_filters</depend>
  <depend>std_msgs</depend>
  <depend>image_transport</depend>
  <depend>pointcloud_to_laserscan</depend>
  <depend>pcl_conversions</depend>
  <depend>cv_bridge</depend>
  <depend>pcl_ros</depend>
  <depend>nodelet</depend>
  <depend>cmr_os</depend>

  <exec_depend>rtabmap_ros</exec_depend>
  <export>
	    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>
</package>
