<?xml version="1.0"?>
<package format="2">
    <name>cmr_os</name>
    <version>0.0.0</version>
    <description>
        The cmr_os repository provides a software development kit 
        for applications with Campus Maschinenbau Robot
    </description>
    <maintainer email="Marvin.Stuede@imes.uni-hannover.de">Marvin Stüde</maintainer>

    <license>BSD</license>  

    <buildtool_depend>catkin</buildtool_depend>
    <test_depend>rosunit</test_depend>
    <depend>roscpp</depend>
    <depend>geometry_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>rostest</depend>
    <depend>cmr_description</depend>
    <depend>tf</depend>

</package>
